@@ -1,4 +1,4 @@
-SUBDIRS = gconf backends wrappers po intl
+SUBDIRS = gconf backends wrappers po intl doc
 
 bin_SCRIPTS = gconf-config
 
