@@ -113,6 +113,7 @@ wrappers/Makefile
 wrappers/guile/Makefile
 intl/Makefile
 po/Makefile.in
+doc/Makefile
 ],
 chmod +x gconf-config)
 
