@@ -3,4 +3,4 @@
 # bottom, and the first one to have a value for the key (or the first one 
 # to be writeable) is used to load/store the data.
 # You can also use include statements
-xml:/home/hp/.gconf
+xml:$(HOME)/.gconf
